--- a/osx/Preference Pane/Installer/Russian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Russian.lproj/Localizable.strings
@@ -6,6 +6,6 @@
 "Logitech Media Server install failed.\n" = "Сбой установки Logitech Media Server.";
 "You must have OS X 10.3 or later to run Logitech Media Server.\n" = "Для работы Logitech Media Server требуется OS X 10.3 или более поздняя версия.";
 "Mac OS X 10.3 Required" = "Требуется Mac OS X 10.3";
-"Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
-"Please stop Logitech Media Server before running the installer.\n" = "Please stop Logitech Media Server before running the installer.\n";
+"Please quit System Preferences before running the installer.\n" = "До запуска программы установки выход Системные настройки.\n";
+"Please stop Logitech Media Server before running the installer.\n" = "До запуска программы установки остановите Logitech Media Server.\n";
 "Version x.y.z" = "Версия 7.7.0";
