--- a/osx/Preference Pane/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Finnish.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 ﻿"Start Server" = "Käynnistä palvelin";
 "Stop Server" = "Pysäytä palvelin";
-"Start Server Description" = "Käynnistä Squeeze Server tällä painikkeella. Kun se on käynnissä, soittimet voivat käyttää musiikkikirjastoa.";
+"Start Server Description" = "Käynnistä Logitech Media Server tällä painikkeella. Kun se on käynnissä, soittimet voivat käyttää musiikkikirjastoa.";
 "Stop Server Description" = "Sulje Logitech Media Server tällä painikkeella. Kun se on suljettu, soittimet eivät voi käyttää musiikkikirjastoa.";
 "Authorization Launch Error" = "Laiteohjelmistoa ei voida päivittää: tiedosto Update Firmware.sh puuttuu.";
 "Expired Authorization Error" = "Laiteohjelmistoa ei voida päivittää: valtuutus vanhentunut.";
