--- a/osx/Preference Pane/Installer/Dutch.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Installer.strings
@@ -1,5 +1,5 @@
 ﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
-"About Logitech Media Server Installer" = "Installatieprogramma van Logitech Media Server";
+"About Logitech Media Server Installer" = "Installatieprogramma voor Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
 "Bring All to Front" = "Alles op voorgrond";
@@ -11,7 +11,7 @@
 "Hide Others" = "Verberg andere";
 
 /* NSMenuItem : <title:Hide Logitech Media Server Installer> (oid:134) */
-"Hide Logitech Media Server Installer" = "Installatieprogramma van Logitech Media Server verbergen";
+"Hide Logitech Media Server Installer" = "Verberg installatieprogramma voor Logitech Media Server";
 
 /* NSButton (Install) : <title:Install> (oid:205) */
 "Install" = "Installeer";
@@ -35,7 +35,7 @@
 "Quit" = "Stoppen";
 
 /* NSMenuItem : <title:Quit Logitech Media Server Installer> (oid:136) */
-"Quit Logitech Media Server Installer" = "Installatieprogramma van Logitech Media Server sluiten";
+"Quit Logitech Media Server Installer" = "Installatieprogramma voor Logitech Media Server sluiten";
 
 /* NSMenuItem : <title:Services> (oid:131) */
 "Services" = "Services";
@@ -64,7 +64,7 @@
 This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Welkom bij het installatieprogramma van Logitech Media Server.\n\nDit programma installeert Logitech Media Server voor gebruik met 'Systeemvoorkeuren'. Je kunt aangeven of het voorkeurenpaneel voor alle gebruikers of alleen de huidige gebruiker beschikbaar moet zijn. \n\nKlik op 'Installeren' om het paneel te installeren of op 'Sluiten' om af te sluiten.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Welkom bij het installatieprogramma voor Logitech Media Server.\n\nDit programma installeert Logitech Media Server voor gebruik met 'Systeemvoorkeuren'. Je kunt aangeven of het voorkeurenpaneel voor alle gebruikers of alleen voor de huidige gebruiker beschikbaar moet zijn. \n\nKlik op 'Installeer' om het paneel te installeren of op 'Stop' om af te sluiten.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Venster";
