--- a/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
@@ -6,6 +6,6 @@
 "Logitech Media Server install failed.\n" = "Installatie van Logitech Media Server is mislukt.";
 "You must have OS X 10.3 or later to run Logitech Media Server.\n" = "U moet OS X 10.3 of hoger hebben om Logitech Media Server uit te voeren.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 vereist";
-"Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
-"Please stop Logitech Media Server before running the installer.\n" = "Please stop Logitech Media Server before running the installer.\n";
+"Please quit System Preferences before running the installer.\n" = "Sluit Systeemvoorkeuren voor het uitvoeren van de installatieprogramma.\n";
+"Please stop Logitech Media Server before running the installer.\n" = "Stop Logitech Media Server voor het uitvoeren van de installatieprogramma.\n";
 "Version x.y.z" = "Versie 7.7.0";
