--- a/osx/Preference Pane/Installer/Italian.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/Installer.strings
@@ -1,4 +1,4 @@
-﻿/* NSMenuItem : <title:About Logitech Media Installer> (oid:58) */
+﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
 "About Logitech Media Server Installer" = "Informazioni sul programma di installazione di Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
@@ -64,7 +64,7 @@
 This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Programma di installazione di Squeezebox.\n\nQuesta applicazione consente di installare Logitech Media Server per l'utilizzo con Preferenze di Sistema. È possibile rendere il riquadro delle preferenze disponibile a tutti gli utenti o solo all'utente corrente.\n\nFai clic su Installa per installare il riquadro delle preferenze, oppure fai clic su Esci per chiudere l'applicazione.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Programma di installazione di Logitech Media Server.\n\nQuesta applicazione consente di installare Logitech Media Server per l'utilizzo con Preferenze di Sistema. È possibile rendere il riquadro delle preferenze disponibile a tutti gli utenti o solo all'utente corrente.\n\nFai clic su Installa per installare il riquadro delle preferenze, oppure fai clic su Esci per chiudere l'applicazione.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Finestra";
