--- a/osx/Preference Pane/Installer/Italian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/Localizable.strings
@@ -6,6 +6,6 @@
 "Logitech Media Server install failed.\n" = "Installazione di Logitech Media Server non riuscita.";
 "You must have OS X 10.3 or later to run Logitech Media Server.\n" = "Per eseguire Logitech Media Server è necessario Mac OS X 10.3 o versione successiva.";
 "Mac OS X 10.3 Required" = "È necessario Mac OS X 10.3.";
-"Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
-"Please stop Logitech Media Server before running the installer.\n" = "Please stop Logitech Media Server before running the installer.\n";
+"Please quit System Preferences before running the installer.\n" = "Uscire da Preferenze di Sistema prima di eseguire il programma di installazione.\n";
+"Please stop Logitech Media Server before running the installer.\n" = "Arrestare Logitech Media Server prima di eseguire il programma di installazione.\n";
 "Version x.y.z" = "Versione 7.7.0";
