--- a/osx/Preference Pane/Installer/Norwegian.lproj/Installer.strings
+++ b/osx/Preference Pane/Installer/Norwegian.lproj/Installer.strings
@@ -1,4 +1,4 @@
-﻿/* NSMenuItem : <title:About Logitech Media Server Installer> (oid:58) */
+﻿/* NSMenuItem : <title:About SlimServer Installer> (oid:58) */
 "About Logitech Media Server Installer" = "Om installasjonsprogrammet for Logitech Media Server";
 
 /* NSMenuItem : <title:Bring All to Front> (oid:5) */
@@ -64,7 +64,7 @@
 This application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. 
 
 Click Install to install the preference pane or click Quit to exit.> (oid:198) */
-"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Velkommen til installasjonsprogrammet for Squeezebox.\n\nDette programmet installerer Squeezebox til bruk med Systeminnstillinger. Du kan angi om innstillingsruten skal være tilgjengelig for alle brukere, eller bare for gjeldende bruker. \n\nKlikk på Installer for å installere innstillingsruten, eller klikk på Avslutt for å lukke programmet.";
+"Welcome to the Logitech Media Server Installer.\n\nThis application will install the Logitech Media Server for use with System Preferences.  You may choose to have the preference pane available to all users or just for the current user. \n\nClick Install to install the preference pane or click Quit to exit." = "Velkommen til installasjonsprogrammet for Logitech Media Server.\n\nDette programmet installerer Logitech Media Server til bruk med Systeminnstillinger. Du kan angi om innstillingsruten skal være tilgjengelig for alle brukere, eller bare for gjeldende bruker. \n\nKlikk på Installer for å installere innstillingsruten, eller klikk på Avslutt for å lukke programmet.";
 
 /* NSMenu : <title:Window> (oid:24) */
 "Window" = "Vindu";
