--- a/osx/Preference Pane/Installer/Spanish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Spanish.lproj/Localizable.strings
@@ -6,6 +6,6 @@
 "Logitech Media Server install failed.\n" = "Fallo de instalación de Logitech Media Server.";
 "You must have OS X 10.3 or later to run Logitech Media Server.\n" = "Para ejecutar Logitech Media Server, debe tener OS X 10.3 o posterior.";
 "Mac OS X 10.3 Required" = "Se requiere Mac OS X 10.3";
-"Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
-"Please stop Logitech Media Server before running the installer.\n" = "Please stop Logitech Media Server before running the installer.\n";
+"Please quit System Preferences before running the installer.\n" = "Salga de Preferencias del Sistema antes de ejecutar el instalador.\n";
+"Please stop Logitech Media Server before running the installer.\n" = "Detenga Logitech Media Server antes de ejecutar el instalador.\n";
 "Version x.y.z" = "Versión 7.7.0";
