rename Debian package. Don't rename usernames, folders, files etc. just yet, as this would break thousands of existing installations.
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33118 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/README
+++ b/debian/README
@@ -1,10 +1,10 @@
 $Id$
 
-This is Squeezebox Server for Debian.
+This is Logitech Media Server for Debian.
 
 It includes all fonts, HTML & Firmware, unlike the "Official Debian Package".
 
-Please see http://www.slimdevices.com/ for more information.
+Please see http://www.mysqueezebox.com/ for more information.
 
 - Matt Wise <debian | at | slimdevices.com>
 
