can't simply rename the package name, it would automatically rename folders too
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33119 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-logitechmediaserver (_VERSION_) testing; urgency=low
+squeezeboxserver (_VERSION_) testing; urgency=low
 
   * Logitech Media Package
 
