more renaming business - readynas
git-svn-id: file:///home/awy/mirror/slim/7.7/trunk/platforms@33121 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/changelog
+++ b/readynas/changelog
@@ -1,5 +1,5 @@
 squeezeboxserver (_VERSION_) testing; urgency=low
 
-  * Squeezebox Server Package
+  * Logitech Media Server Package
 
  -- Matt Wise <mwise@slimdevices.com>  Mon, 03 Aug 2009 04:14:33 -0000
