--- a/debian-full/README
+++ b/debian-full/README
@@ -1,10 +1,10 @@
 $Id$
 
-This is Logitech Media Server for Debian.
+This is UE Music Library for Debian.
 
 It includes all fonts, HTML & Firmware, unlike the "Official Debian Package".
 
-Please see http://www.mysqueezebox.com/ for more information.
+Please see http://www.UEsmartradio.com/ for more information.
 
 - Matt Wise <debian | at | slimdevices.com>
 
