Add two files we missed in the Wx checkin
Change-Id: Ie1ec016c482f73210a1849c9d64cf3daaa3bfcd5

--- a/win32/lib/perl5/README
+++ b/win32/lib/perl5/README
@@ -6,4 +6,6 @@ to C:\Perl\site. This target folder is hardcoded in buildme.pl.
 
 WxPerl binaries for ActivePerl can be found at http://www.wxperl.co.uk/ 
 
+June 2012 - above repository seems to be gone. Keeping the latest copy I could find.
+
 -- Michael 
