Change OSX resources to show the new product name
- replace product names (translations to be updated)
- bump copyright notice
- bump version numbers

Change-Id: I58de3ecc0e6e536748362707b140de1fd7afe545

--- a/osx/Preference Pane/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Czech.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Spustit Server";
 "Stop Server" = "Zastavit Server";
-"Start Server Description" = "Ke spuštění Logitech Media Server klikněte na toto tlačítko. Po spuštění získají přehrávače přístup do vaší hudební knihovny.";
-"Stop Server Description" = "K zastavení Logitech Media Server klikněte na toto tlačítko. Po zastavení ztratí přehrávače přístup do vaší hudební knihovny.";
+"Start Server Description" = "Ke spuštění UE Music Library klikněte na toto tlačítko. Po spuštění získají přehrávače přístup do vaší hudební knihovny.";
+"Stop Server Description" = "K zastavení UE Music Library klikněte na toto tlačítko. Po zastavení ztratí přehrávače přístup do vaší hudební knihovny.";
 "Authorization Launch Error" = "Není možné aktualizovat firmware: chybějící soubor Update Firmware.sh.";
 "Expired Authorization Error" = "Není možné aktualizovat firmware: autorizace vypršela.";
 "Firmware version" = "Firmware verze %@.";
 "Firmware version invalid" = "Neplatná verze firmware.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Aktualizovaná verze Logitech Media Server je k dispozici a připravena k instalaci.";
-"There's no updated Logitech Media Server version available." = "K dispozici není žádná aktualizovaná verze Logitech Media Server.";
+"An updated UE Music Library version is available and ready to be installed." = "Aktualizovaná verze UE Music Library je k dispozici a připravena k instalaci.";
+"There's no updated UE Music Library version available." = "K dispozici není žádná aktualizovaná verze UE Music Library.";
 "Check for update" = "Hledat aktualizace";
 "Download update" = "Stáhnout aktualizaci";
 "Install update" = "Instalovat aktualizaci";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Před zahájením čištění musí být Logitech Media Server zastaven. Chcete ho zastavit nyní?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Před zahájením čištění musí být UE Music Library zastaven. Chcete ho zastavit nyní?";
 "Run Cleanup" = "Spustit čištění";
 "Cancel" = "Storno";
 "Not now" = "Nyní ne";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Server je zastaven";
 "The server is running" = "Server je spuštěn";
 "The server is starting" = "Spouštění server";
-"Version x.y.z" = "Verze 7.8.0";
+"Version x.y.z" = "Verze 10.0.0";
