--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Start server";
 "Stop Server" = "Stop server";
-"Start Server Description" = "Klik på denne knap for at starte Logitech Media Server. Når den kører, får afspillerne adgang til dit musikbibliotek.";
-"Stop Server Description" = "Klik på denne knap for at stoppe Logitech Media Server. Når den er stoppet, har afspillerne ikke længere adgang til dit musikbibliotek.";
+"Start Server Description" = "Klik på denne knap for at starte UE Music Library. Når den kører, får afspillerne adgang til dit musikbibliotek.";
+"Stop Server Description" = "Klik på denne knap for at stoppe UE Music Library. Når den er stoppet, har afspillerne ikke længere adgang til dit musikbibliotek.";
 "Authorization Launch Error" = "Firmwaren kunne ikke opdateres: filen Update Firmware.sh mangler.";
 "Expired Authorization Error" = "Firmwaren kunne ikke opdateres: Godkendelsen er forældet.";
 "Firmware version" = "Firmwareversion %@.";
 "Firmware version invalid" = "Firmwareversionen er ugyldig.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Der findes en opdateret version af Logitech Media Server som er klar til at blive installeret.";
-"There's no updated Logitech Media Server version available." = "Der findes ikke en nyere version af Logitech Media Server.";
+"An updated UE Music Library version is available and ready to be installed." = "Der findes en opdateret version af UE Music Library som er klar til at blive installeret.";
+"There's no updated UE Music Library version available." = "Der findes ikke en nyere version af UE Music Library.";
 "Check for update" = "Søg efter opdateringer";
 "Download update" = "Hent opdatering";
 "Install update" = "Installer opdatering";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server skal stoppes før der kan foretages en oprydning. Vil du stoppe den nu?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "UE Music Library skal stoppes før der kan foretages en oprydning. Vil du stoppe den nu?";
 "Run Cleanup" = "Ryd op";
 "Cancel" = "Annuller";
 "Not now" = "Ikke nu";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Serveren er stoppet";
 "The server is running" = "Serveren kører";
 "The server is starting" = "Serveren starter";
-"Version x.y.z" = "Version 7.8.0";
+"Version x.y.z" = "Version 10.0.0";
