--- a/osx/Preference Pane/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/German.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "Start Server" = "Server starten";
 "Stop Server" = "Server anhalten";
-"Start Server Description" = "Klicken Sie auf diese Schaltfläche, um Logitech Media Server zu starten. Nach dem Start können Player auf Ihre Musiksammlung zugreifen.";
-"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um Logitech Media Server anzuhalten. Wenn der Server angehalten wurde, können die Player nicht mehr auf Ihre Musiksammlung zugreifen.";
+"Start Server Description" = "Klicken Sie auf diese Schaltfläche, um UE Music Library zu starten. Nach dem Start können Player auf Ihre Musiksammlung zugreifen.";
+"Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um UE Music Library anzuhalten. Wenn der Server angehalten wurde, können die Player nicht mehr auf Ihre Musiksammlung zugreifen.";
 "Authorization Launch Error" = "Firmware konnte nicht aktualisiert werden: Datei 'Update Firmware.sh' fehlt.";
 "Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Autorisierung abgelaufen.";
 "Firmware version" = "Firmware-Version %@.";
 "Firmware version invalid" = "Firmware-Version ungültig.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Eine aktualisierte Version von Logitech Media Server ist verfügbar und kann installiert werden.";
-"There's no updated Logitech Media Server version available." = "Es ist keine aktualisierte Version des Logitech Media Server verfügbar.";
+"An updated UE Music Library version is available and ready to be installed." = "Eine aktualisierte Version von UE Music Library ist verfügbar und kann installiert werden.";
+"There's no updated UE Music Library version available." = "Es ist keine aktualisierte Version des UE Music Library verfügbar.";
 "Check for update" = "Nach Update suchen";
 "Download update" = "Update herunterladen";
 "Install update" = "Update installieren";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server muss vor der Ausführung der Bereinigung angehalten werden. Soll der Server jetzt angehalten werden?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "UE Music Library muss vor der Ausführung der Bereinigung angehalten werden. Soll der Server jetzt angehalten werden?";
 "Run Cleanup" = "Bereinigung durchführen";
 "Cancel" = "Abbrechen";
 "Not now" = "Nicht jetzt";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Der Server wurde angehalten.";
 "The server is running" = "Der Server wird ausgeführt";
 "The server is starting" = "Der Server wird gestartet...";
-"Version x.y.z" = "Version 7.8.0";
+"Version x.y.z" = "Version 10.0.0";
