--- a/osx/Preference Pane/Swedish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Swedish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Starta servern";
 "Stop Server" = "Stoppa servern";
-"Start Server Description" = "Klicka på den här knappen för att starta Logitech Media Server. När den har startats kan spelare komma åt din musiksamling.";
-"Stop Server Description" = "Klicka på den här knappen för att stoppa Logitech Media Server. När den har stoppats kan spelare inte längre komma åt din musiksamling";
+"Start Server Description" = "Klicka på den här knappen för att starta UE Music Library. När den har startats kan spelare komma åt din musiksamling.";
+"Stop Server Description" = "Klicka på den här knappen för att stoppa UE Music Library. När den har stoppats kan spelare inte längre komma åt din musiksamling";
 "Authorization Launch Error" = "Det går inte att uppdatera den inbyggda programvaran: filen Update Firmware.sh saknas.";
 "Expired Authorization Error" = "Det går inte att uppdatera den inbyggda programvaran: auktoriseringstiden har löpt ut.";
 "Firmware version" = "Version av inbyggd programvara %@.";
 "Firmware version invalid" = "Ogiltig version av inbyggd programvara.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Det finns en uppdaterad Logitech Media Server-version som kan installeras.";
-"There's no updated Logitech Media Server version available." = "Det finns ingen uppdaterad version av Logitech Media Server tillgänglig.";
+"An updated UE Music Library version is available and ready to be installed." = "Det finns en uppdaterad UE Music Library-version som kan installeras.";
+"There's no updated UE Music Library version available." = "Det finns ingen uppdaterad version av UE Music Library tillgänglig.";
 "Check for update" = "Sök efter uppdatering";
 "Download update" = "Ladda ner uppdatering";
 "Install update" = "Installera uppdatering";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server måste stoppas innan du kör rensningen. Vill du stoppa den nu?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "UE Music Library måste stoppas innan du kör rensningen. Vill du stoppa den nu?";
 "Run Cleanup" = "Kör rensning";
 "Cancel" = "Avbryt";
 "Not now" = "Inte just nu";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Servern har stoppats";
 "The server is running" = "Servern körs";
 "The server is starting" = "Servern startar";
-"Version x.y.z" = "Version 7.8.0";
+"Version x.y.z" = "Version 10.0.0";
