--- a/osx/Preference Pane/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Dutch.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Start server";
 "Stop Server" = "Stop server";
-"Start Server Description" = "Klik op deze knop om de Logitech Media Server te starten. Nadat de server gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
-"Stop Server Description" = "Klik op deze knop om de Logitech Media Server te stoppen. Nadat de server gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
+"Start Server Description" = "Klik op deze knop om de UE Music Library te starten. Nadat de server gestart is, hebben muzieksystemen toegang tot je muziekcollectie.";
+"Stop Server Description" = "Klik op deze knop om de UE Music Library te stoppen. Nadat de server gestopt is, hebben muzieksystemen geen toegang meer tot je muziekcollectie.";
 "Authorization Launch Error" = "Kan firmware niet updaten: bestand Update Firmware.sh ontbreekt.";
 "Expired Authorization Error" = "Kan firmware niet updaten: autorisatie verlopen.";
 "Firmware version" = "Firmwareversie %@.";
 "Firmware version invalid" = "Firmwareversie ongeldig.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Er is een bijgewerkte versie van Logitech Media Server beschikbaar die direct geïnstalleerd kan worden.";
-"There's no updated Logitech Media Server version available." = "Er is geen bijgewerkte versie van Logitech Media Server beschikbaar.";
+"An updated UE Music Library version is available and ready to be installed." = "Er is een bijgewerkte versie van UE Music Library beschikbaar die direct geïnstalleerd kan worden.";
+"There's no updated UE Music Library version available." = "Er is geen bijgewerkte versie van UE Music Library beschikbaar.";
 "Check for update" = "Op update controleren";
 "Download update" = "Update downloaden";
 "Install update" = "Update installeren";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server moet worden stopgezet, voordat de opschoning wordt uitgevoerd. Wil je de server nu stoppen?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "UE Music Library moet worden stopgezet, voordat de opschoning wordt uitgevoerd. Wil je de server nu stoppen?";
 "Run Cleanup" = "Opschoning uitvoeren";
 "Cancel" = "Annuleer";
 "Not now" = "Niet nu";
@@ -21,4 +21,4 @@
 "The server is stopped" = "De server is gestopt";
 "The server is running" = "De server is actief";
 "The server is starting" = "De server wordt gestart";
-"Version x.y.z" = "Versie 7.8.0";
+"Version x.y.z" = "Versie 10.0.0";
