--- a/osx/Preference Pane/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Finnish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Käynnistä palvelin";
 "Stop Server" = "Pysäytä palvelin";
-"Start Server Description" = "Käynnistä Logitech Media Server tällä painikkeella. Kun se on käynnissä, soittimet voivat käyttää musiikkikirjastoa.";
-"Stop Server Description" = "Sulje Logitech Media Server tällä painikkeella. Kun se on suljettu, soittimet eivät voi käyttää musiikkikirjastoa.";
+"Start Server Description" = "Käynnistä UE Music Library tällä painikkeella. Kun se on käynnissä, soittimet voivat käyttää musiikkikirjastoa.";
+"Stop Server Description" = "Sulje UE Music Library tällä painikkeella. Kun se on suljettu, soittimet eivät voi käyttää musiikkikirjastoa.";
 "Authorization Launch Error" = "Laiteohjelmistoa ei voida päivittää: tiedosto Update Firmware.sh puuttuu.";
 "Expired Authorization Error" = "Laiteohjelmistoa ei voida päivittää: valtuutus vanhentunut.";
 "Firmware version" = "Laiteohjelmistoversio %@.";
 "Firmware version invalid" = "Väärä laiteohjelmistoversio.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Logitech Media Serverin päivitetty versio on käytettävissä ja valmiina ladattavaksi.";
-"There's no updated Logitech Media Server version available." = "Logitech Media Serveristä ei ole saatavilla päivitettyä versiota.";
+"An updated UE Music Library version is available and ready to be installed." = "UE Music Libraryin päivitetty versio on käytettävissä ja valmiina ladattavaksi.";
+"There's no updated UE Music Library version available." = "UE Music Libraryistä ei ole saatavilla päivitettyä versiota.";
 "Check for update" = "Etsi päivityksiä";
 "Download update" = "Lataa päivitys";
 "Install update" = "Asenna päivitys";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server täytyy pysäyttää ennen puhdistuksen suorittamista. Haluatko pysäyttää sen nyt?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "UE Music Library täytyy pysäyttää ennen puhdistuksen suorittamista. Haluatko pysäyttää sen nyt?";
 "Run Cleanup" = "Suorita puhdistus";
 "Cancel" = "Peruuta";
 "Not now" = "Ei nyt";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Palvelin on pysäytetty";
 "The server is running" = "Palvelin on käynnissä";
 "The server is starting" = "Palvelin käynnistetään";
-"Version x.y.z" = "Versio 7.8.0";
+"Version x.y.z" = "Versio 10.0.0";
