--- a/osx/Preference Pane/French.lproj/Localizable.strings
+++ b/osx/Preference Pane/French.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Démarrer le serveur";
 "Stop Server" = "Arrêter le serveur";
-"Start Server Description" = "Cliquez sur ce bouton pour démarrer le Logitech Media Server. Une fois le serveur démarré, les platines pourront accéder à votre collection musicale.";
-"Stop Server Description" = "Cliquez sur ce bouton pour arrêter le Logitech Media Server. Une fois le serveur arrêté, les platines ne pourront pas accéder à votre collection musicale.";
+"Start Server Description" = "Cliquez sur ce bouton pour démarrer le UE Music Library. Une fois le serveur démarré, les platines pourront accéder à votre collection musicale.";
+"Stop Server Description" = "Cliquez sur ce bouton pour arrêter le UE Music Library. Une fois le serveur arrêté, les platines ne pourront pas accéder à votre collection musicale.";
 "Authorization Launch Error" = "Impossible de mettre à jour le micrologiciel: fichier Update Firmware.sh manquant.";
 "Expired Authorization Error" = "Impossible de mettre à jour le micrologiciel: l'autorisation a expiré.";
 "Firmware version" = "Version %@ du micrologiciel.";
 "Firmware version invalid" = "Version du micrologiciel non valide.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Une nouvelle version du Logitech Media Server est disponible et prête à l'installation.";
-"There's no updated Logitech Media Server version available." = "Aucune nouvelle version du Logitech Media Server n'est disponible.";
+"An updated UE Music Library version is available and ready to be installed." = "Une nouvelle version du UE Music Library est disponible et prête à l'installation.";
+"There's no updated UE Music Library version available." = "Aucune nouvelle version du UE Music Library n'est disponible.";
 "Check for update" = "Rechercher les mises à jour";
 "Download update" = "Télécharger la mise à jour";
 "Install update" = "Installer la mise à jour";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Le Logitech Media Server doit être arrêté avant le lancement du nettoyage. Souhaitez-vous l'arrêter maintenant?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Le UE Music Library doit être arrêté avant le lancement du nettoyage. Souhaitez-vous l'arrêter maintenant?";
 "Run Cleanup" = "Lancer le nettoyage";
 "Cancel" = "Annuler";
 "Not now" = "Pas maintenant";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Le serveur est arrêté.";
 "The server is running" = "Le serveur est en cours d'exécution.";
 "The server is starting" = "Démarrage du serveur...";
-"Version x.y.z" = "Version 7.8.0";
+"Version x.y.z" = "Version 10.0.0";
