--- a/osx/Preference Pane/Italian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Italian.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Avvia server";
 "Stop Server" = "Arresta server";
-"Start Server Description" = "Fai clic su questo pulsante per avviare Logitech Media Server. Una volta avviato, i lettori avranno accesso alla libreria musicale.";
-"Stop Server Description" = "Fai clic su questo pulsante per arrestare Logitech Media Server. Una volta arrestato, i lettori non saranno più in grado di accedere alla libreria musicale.";
+"Start Server Description" = "Fai clic su questo pulsante per avviare UE Music Library. Una volta avviato, i lettori avranno accesso alla libreria musicale.";
+"Stop Server Description" = "Fai clic su questo pulsante per arrestare UE Music Library. Una volta arrestato, i lettori non saranno più in grado di accedere alla libreria musicale.";
 "Authorization Launch Error" = "Impossibile aggiornare il firmware: File Update Firmware.sh mancante.";
 "Expired Authorization Error" = "Impossibile aggiornare il firmware: autorizzazione scaduta.";
 "Firmware version" = "Versione firmware %@.";
 "Firmware version invalid" = "Versione firmware non valida.";
-"An updated Logitech Media Server version is available and ready to be installed." = "È disponibile una versione aggiornata di Logitech Media Server, pronta per essere installata.";
-"There's no updated Logitech Media Server version available." = "Non è disponibile alcuna versione aggiornata di Logitech Media Server.";
+"An updated UE Music Library version is available and ready to be installed." = "È disponibile una versione aggiornata di UE Music Library, pronta per essere installata.";
+"There's no updated UE Music Library version available." = "Non è disponibile alcuna versione aggiornata di UE Music Library.";
 "Check for update" = "Verifica disponibilità aggiornamenti";
 "Download update" = "Scarica aggiornamento";
 "Install update" = "Installa aggiornamento";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Prima di eseguire la pulizia è necessario arrestare Logitech Media Server. Arrestarlo adesso?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Prima di eseguire la pulizia è necessario arrestare UE Music Library. Arrestarlo adesso?";
 "Run Cleanup" = "Esegui pulizia";
 "Cancel" = "Annulla";
 "Not now" = "Non adesso";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Il server è stato arrestato";
 "The server is running" = "Il server è in esecuzione";
 "The server is starting" = "Avvio di server in corso";
-"Version x.y.z" = "Versione 7.8.0";
+"Version x.y.z" = "Versione 10.0.0";
