--- a/osx/Preference Pane/Norwegian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Norwegian.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Start server";
 "Stop Server" = "Stopp server";
-"Start Server Description" = "Klikk på denne knappen for å starte Logitech Media Server. Spillerne får tilgang til musikkbiblioteket ditt når Logitech Media Server startes.";
-"Stop Server Description" = "Klikk på denne knappen for å stoppe Logitech Media Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når Logitech Media Server er stoppet.";
+"Start Server Description" = "Klikk på denne knappen for å starte UE Music Library. Spillerne får tilgang til musikkbiblioteket ditt når UE Music Library startes.";
+"Stop Server Description" = "Klikk på denne knappen for å stoppe UE Music Library. Spillerne har ikke tilgang til musikkbiblioteket ditt når UE Music Library er stoppet.";
 "Authorization Launch Error" = "Kunne ikke oppdatere fastvaren: filen Update Firmware.sh mangler.";
 "Expired Authorization Error" = "Kunne ikke oppdatere fastvare: autorisasjonen har utløpt.";
 "Firmware version" = "Fastvareversjon %@.";
 "Firmware version invalid" = "Ugyldig fastvareversjon.";
-"An updated Logitech Media Server version is available and ready to be installed." = "En oppdatert versjon av Logitech Media Server er tilgjengelig og klar til installering.";
-"There's no updated Logitech Media Server version available." = "Det finnes ingen oppdatert versjon av Logitech Media Server tilgjengelig.";
+"An updated UE Music Library version is available and ready to be installed." = "En oppdatert versjon av UE Music Library er tilgjengelig og klar til installering.";
+"There's no updated UE Music Library version available." = "Det finnes ingen oppdatert versjon av UE Music Library tilgjengelig.";
 "Check for update" = "Se etter oppdatering";
 "Download update" = "Last ned oppdatering";
 "Install update" = "Installer oppdatering";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Logitech Media Server må stoppes før oppryddingen kan kjøres. Vil du stoppe den nå?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "UE Music Library må stoppes før oppryddingen kan kjøres. Vil du stoppe den nå?";
 "Run Cleanup" = "Kjør opprydding";
 "Cancel" = "Avbryt";
 "Not now" = "Ikke nå";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Serveren er stoppet";
 "The server is running" = "Serveren kjører";
 "The server is starting" = "Serveren starter";
-"Version x.y.z" = "Versjon 7.8.0";
+"Version x.y.z" = "Versjon 10.0.0";
