--- a/osx/Preference Pane/Polish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Polish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Uruchom serwer";
 "Stop Server" = "Zatrzymaj serwer";
-"Start Server Description" = "Kliknij ten przycisk, aby uruchomić program Logitech Media Server. Po uruchomieniu odtwarzacze będą mogły uzyskać dostęp do biblioteki muzyki.";
-"Stop Server Description" = "Kliknij ten przycisk, aby zatrzymać program Logitech Media Server. Po zatrzymaniu odtwarzacze nie będą mogły uzyskać dostępu do biblioteki muzyki.";
+"Start Server Description" = "Kliknij ten przycisk, aby uruchomić program UE Music Library. Po uruchomieniu odtwarzacze będą mogły uzyskać dostęp do biblioteki muzyki.";
+"Stop Server Description" = "Kliknij ten przycisk, aby zatrzymać program UE Music Library. Po zatrzymaniu odtwarzacze nie będą mogły uzyskać dostępu do biblioteki muzyki.";
 "Authorization Launch Error" = "Nie można uaktualnić oprogramowania układowego: brak pliku Update Firmware.sh.";
 "Expired Authorization Error" = "Nie można uaktualnić oprogramowania układowego: autoryzacja wygasła.";
 "Firmware version" = "Wersja oprogramowania układowego %@.";
 "Firmware version invalid" = "Nieprawidłowa wersja oprogramowania układowego.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Zaktualizowana wersja programu Logitech Media Server jest dostępna i gotowa do zainstalowania.";
-"There's no updated Logitech Media Server version available." = "Brak dostępnej zaktualizowanej wersji programu Logitech Media Server.";
+"An updated UE Music Library version is available and ready to be installed." = "Zaktualizowana wersja programu UE Music Library jest dostępna i gotowa do zainstalowania.";
+"There's no updated UE Music Library version available." = "Brak dostępnej zaktualizowanej wersji programu UE Music Library.";
 "Check for update" = "Sprawdź dostępność aktualizacji";
 "Download update" = "Pobierz aktualizację";
 "Install update" = "Zainstaluj aktualizację";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Przed uruchomieniem czyszczenia należy zatrzymać program Logitech Media Server. Czy chcesz go zatrzymać teraz?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Przed uruchomieniem czyszczenia należy zatrzymać program UE Music Library. Czy chcesz go zatrzymać teraz?";
 "Run Cleanup" = "Uruchom czyszczenie";
 "Cancel" = "Anuluj";
 "Not now" = "Nie teraz";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Serwer jest zatrzymany";
 "The server is running" = "Serwer działa";
 "The server is starting" = "Uruchamianie serwer";
-"Version x.y.z" = "Wersja 7.8.0";
+"Version x.y.z" = "Wersja 10.0.0";
