--- a/osx/Preference Pane/Russian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Russian.lproj/InfoPlist.strings
@@ -1,7 +1,7 @@
 ﻿/* Localized versions of Info.plist keys */
 
-CFBundleName = "Logitech Media Server";
-CFBundleShortVersionString = "7.8.0";
-CFBundleGetInfoString = "Logitech Media Server, версия 7.8.0. © Logitech, 2002-2011";
-NSHumanReadableCopyright = "© Logitech, 2002-2011";
+CFBundleName = "UE Music Library";
+CFBundleShortVersionString = "10.0.0";
+CFBundleGetInfoString = "UE Music Library, версия 10.0.0. © Logitech, 2002-2012";
+NSHumanReadableCopyright = "© Logitech, 2002-2012";
 NSPrefPaneIconLabel = "Logitech\nMedia Server";
