--- a/osx/Preference Pane/Russian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Russian.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Запустить сервер";
 "Stop Server" = "Остановить сервер";
-"Start Server Description" = "Нажмите эту кнопку, чтобы запустить Logitech Media Server. После запуска медиатека будет доступна для плееров.";
-"Stop Server Description" = "Нажмите эту кнопку, чтобы остановить Logitech Media Server. После остановки медиатека будет недоступна для плееров.";
+"Start Server Description" = "Нажмите эту кнопку, чтобы запустить UE Music Library. После запуска медиатека будет доступна для плееров.";
+"Stop Server Description" = "Нажмите эту кнопку, чтобы остановить UE Music Library. После остановки медиатека будет недоступна для плееров.";
 "Authorization Launch Error" = "Не удалось обновить микропрограмму: отсутствует файл Update Firmware.sh.";
 "Expired Authorization Error" = "Не удалось обновить микропрограмму: истек срок действия авторизации.";
 "Firmware version" = "Версия микропрограммы %@.";
 "Firmware version invalid" = "Недопустимая версия микропрограммы.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Доступна и готова к установке обновленная версия Logitech Media Server.";
-"There's no updated Logitech Media Server version available." = "Нет доступных обновленных версий Logitech Media Server.";
+"An updated UE Music Library version is available and ready to be installed." = "Доступна и готова к установке обновленная версия UE Music Library.";
+"There's no updated UE Music Library version available." = "Нет доступных обновленных версий UE Music Library.";
 "Check for update" = "Проверить наличие обновления";
 "Download update" = "Загрузить обновление";
 "Install update" = "Установить обновление";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Перед выполнением очистки Logitech Media Server нужно остановить. Остановить сейчас?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Перед выполнением очистки UE Music Library нужно остановить. Остановить сейчас?";
 "Run Cleanup" = "Запустить очистку";
 "Cancel" = "Отмена";
 "Not now" = "Не сейчас";
@@ -21,4 +21,4 @@
 "The server is stopped" = "Cервер остановлен";
 "The server is running" = "Cервер выполняется";
 "The server is starting" = "Запуск сервер";
-"Version x.y.z" = "Версия 7.8.0";
+"Version x.y.z" = "Версия 10.0.0";
