--- a/osx/Preference Pane/Spanish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Spanish.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 ﻿"Start Server" = "Iniciar servidor";
 "Stop Server" = "Detener servidor";
-"Start Server Description" = "Haga clic en este botón para iniciar Logitech Media Server. Una vez iniciado, los reproductores podrán acceder a la biblioteca de música.";
-"Stop Server Description" = "Haga clic en este botón para detener Logitech Media Server. Una vez detenido, los reproductores no podrán acceder a la biblioteca de música.";
+"Start Server Description" = "Haga clic en este botón para iniciar UE Music Library. Una vez iniciado, los reproductores podrán acceder a la biblioteca de música.";
+"Stop Server Description" = "Haga clic en este botón para detener UE Music Library. Una vez detenido, los reproductores no podrán acceder a la biblioteca de música.";
 "Authorization Launch Error" = "Imposible actualizar firmware: falta el archivo Update Firmware.sh.";
 "Expired Authorization Error" = "Imposible actualizar firmware: la autorización ha caducado.";
 "Firmware version" = "Versión de firmware %@.";
 "Firmware version invalid" = "Versión de firmware no válida.";
-"An updated Logitech Media Server version is available and ready to be installed." = "Hay disponible una versión actualizada de Logitech Media Server y está lista para instalar.";
-"There's no updated Logitech Media Server version available." = "No hay disponible ninguna versión actualizada de Logitech Media Server.";
+"An updated UE Music Library version is available and ready to be installed." = "Hay disponible una versión actualizada de UE Music Library y está lista para instalar.";
+"There's no updated UE Music Library version available." = "No hay disponible ninguna versión actualizada de UE Music Library.";
 "Check for update" = "Buscar actualización";
 "Download update" = "Descargar actualización";
 "Install update" = "Instalar actualización";
-"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Antes de ejecutar la limpieza, se debe detener Logitech Media Server. ¿Desea detenerlo ahora?";
+"The server has to be stopped before running the cleanup. Do you want to stop it now?" = "Antes de ejecutar la limpieza, se debe detener UE Music Library. ¿Desea detenerlo ahora?";
 "Run Cleanup" = "Ejecutar limpieza";
 "Cancel" = "Cancelar";
 "Not now" = "No ahora";
@@ -21,4 +21,4 @@
 "The server is stopped" = "El servidor está detenido";
 "The server is running" = "El servidor está en ejecución";
 "The server is starting" = "Iniciando el servidor";
-"Version x.y.z" = "Versión 7.8.0";
+"Version x.y.z" = "Versión 10.0.0";
