More re-branding, version number and copyright notice updates
Change-Id: I9f73377f89030853d83d8971a01a7e40f922bb29

--- a/osx/Preference Pane/Spanish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Spanish.lproj/InfoPlist.strings
@@ -4,4 +4,4 @@ CFBundleName = "UE Music Library";
 CFBundleShortVersionString = "10.0.0";
 CFBundleGetInfoString = "UE Music Library versión 10.0.0, Copyright 2002-2012 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2012 Logitech";
-NSPrefPaneIconLabel = "Logitech\nMedia Server";
+NSPrefPaneIconLabel = "UE Music Library";
