--- a/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
@@ -4,4 +4,4 @@ CFBundleName = "UE Music Library";
 CFBundleShortVersionString = "10.0.0";
 CFBundleGetInfoString = "UE Music Library versjon 10.0.0, opphavsrett 2002–2012 Logitech";
 NSHumanReadableCopyright = "Opphavsrett 2002–2012 Logitech";
-NSPrefPaneIconLabel = "Logitech\nMedia Server";
+NSPrefPaneIconLabel = "UE Music Library";
