--- a/osx/Preference Pane/Russian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Russian.lproj/InfoPlist.strings
@@ -4,4 +4,4 @@ CFBundleName = "UE Music Library";
 CFBundleShortVersionString = "10.0.0";
 CFBundleGetInfoString = "UE Music Library, версия 10.0.0. © Logitech, 2002-2012";
 NSHumanReadableCopyright = "© Logitech, 2002-2012";
-NSPrefPaneIconLabel = "Logitech\nMedia Server";
+NSPrefPaneIconLabel = "UE Music Library";
