Squeezebox -> UE Smart Radio
Change-Id: I327593a5cfa88a8fe0cadb7030713d6168b845de

--- a/osx/Preference Pane/Finnish.lproj/Pref.strings
+++ b/osx/Preference Pane/Finnish.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Musiikkikirjaston tarkistus";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "Näin musiikkikirjastosi nimetään Squeezeboxisi \Oma musiikki\ -valikossa.";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "Näin musiikkikirjastosi nimetään Smart Radioisi \Oma musiikki\ -valikossa.";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Musiikkikansio\n";
