--- a/osx/Preference Pane/Danish.lproj/Pref.strings
+++ b/osx/Preference Pane/Danish.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Gennemsøg musikbibliotek";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "Dit musikbibliotek får dette navn i Squeezebox-menuen Musik.";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "Dit musikbibliotek får dette navn i Smart Radio-menuen Musik.";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Musikmappe\n";
