--- a/osx/Preference Pane/Dutch.lproj/Pref.strings
+++ b/osx/Preference Pane/Dutch.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Scan van muziekcollectie";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "Dit is de naam waarmee je muziekcollectie in het Squeezebox-menu \"Mijn muziek\" verschijnt.";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "Dit is de naam waarmee je muziekcollectie in het Smart Radio-menu \"Mijn muziek\" verschijnt.";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Muziekmap\n";
