--- a/osx/Preference Pane/German.lproj/Pref.strings
+++ b/osx/Preference Pane/German.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Durchsuchen der Musiksammlung";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "Das ist der Name der Squeezebox im Menü \"Eigene Musik\".";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "Das ist der Name ihrer Musiksammlung im Smart Radio Menü \"Eigene Musik\".";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Musikordner\n";
