--- a/osx/Preference Pane/Italian.lproj/Pref.strings
+++ b/osx/Preference Pane/Italian.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Analisi libreria musicale";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "La libreria musicale viene denominata in questo modo nel menu \"Musica\" di Squeezebox.";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "La libreria musicale viene denominata in questo modo nel menu \"Musica\" di Smart Radio.";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Cartella Musica\n";
