--- a/osx/Preference Pane/Norwegian.lproj/Pref.strings
+++ b/osx/Preference Pane/Norwegian.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Søk i musikkbibliotek";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "Slik vises navnet på musikkbiblioteket i menyen \"Min musikk\" på Squeezebox.";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "Slik vises navnet på musikkbiblioteket i menyen \"Min musikk\" på Smart Radio.";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Musikkmappe\n";
