--- a/osx/Preference Pane/Spanish.lproj/Pref.strings
+++ b/osx/Preference Pane/Spanish.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Examen de biblioteca de música";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "Así es como se llamará la biblioteca de música en el menú \"Mi música\" de Squeezebox.";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "Así es como se llamará la biblioteca de música en el menú \"Mi música\" de Smart Radio.";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Carpeta de música\n";
