--- a/osx/Preference Pane/Swedish.lproj/Pref.strings
+++ b/osx/Preference Pane/Swedish.lproj/Pref.strings
@@ -107,8 +107,8 @@
 /* Class = "NSTextFieldCell"; title = "Music Library Scan"; ObjectID = "1079"; */
 "1079.title" = "Musikbibliotekssökning";
 
-/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Squeezebox's \"My Music\" menu."; ObjectID = "1081"; */
-"1081.title" = "Det här är namnet på ditt musikbibliotek i Squeezebox-menyn \Min musik\.";
+/* Class = "NSTextFieldCell"; title = "This is how your music library will be named in your Smart Radio's \"My Music\" menu."; ObjectID = "1081"; */
+"1081.title" = "Det här är namnet på ditt musikbibliotek i Smart Radio-menyn \Min musik\.";
 
 /* Class = "NSTextFieldCell"; title = "Music Folder\n"; ObjectID = "1083"; */
 "1083.title" = "Musikmapp\n";
