Updated translations for the OSX PrefPane
Change-Id: I9779f7015ab1bdebbd3ad683e41297c2865e7d3d

--- a/osx/Preference Pane/Russian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Russian.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "UE Music Library";
 CFBundleShortVersionString = "10.0.0";
-CFBundleGetInfoString = "UE Music Library, версия 10.0.0. © Logitech, 2002-2012";
+CFBundleGetInfoString = "UE Music Library, версия 10.0.0";
 NSHumanReadableCopyright = "© Logitech, 2002-2012";
 NSPrefPaneIconLabel = "UE Music Library";
