--- a/osx/Preference Pane/Danish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Danish.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "UE Music Library";
 CFBundleShortVersionString = "10.0.0";
-CFBundleGetInfoString = "UE Music Library version 10.0.0. Copyright 2002-2012 Logitech";
+CFBundleGetInfoString = "UE Music Library version 10.0.0";
 NSHumanReadableCopyright = "Copyright 2002-2012 Logitech";
 NSPrefPaneIconLabel = "UE Music Library";
