--- a/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "UE Music Library";
 CFBundleShortVersionString = "10.0.0";
-CFBundleGetInfoString = "UE Music Libraryin versio 10.0.0, Copyright 2002-2012 Logitech";
+CFBundleGetInfoString = "UE Music Libraryn versio 10.0.0, Copyright 2002-2012 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2012 Logitech";
 NSPrefPaneIconLabel = "UE Music Library";
