--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ logitechmediaserver (_VERSION_) testing; urgency=low
 
   * Logitech Media Package
 
- -- Matt Wise <debian@slimdevices.com>  Mon, 03 Aug 2009 15:14:33 -0000
+ -- <admin@lms-community.org>  Mon, 03 Aug 2009 15:14:33 -0000
