--- a/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Norwegian.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "Lyrion Music Server";
 CFBundleShortVersionString = "9.0.0";
-CFBundleGetInfoString = "Lyrion Music Server versjon 9.0.0, opphavsrett 2002–2022 Logitech";
-NSHumanReadableCopyright = "Opphavsrett 2002–2022 Logitech";
-NSPrefPaneIconLabel = "Logitech\nMedia Server";
+CFBundleGetInfoString = "Lyrion Music Server versjon 9.0.0, opphavsrett 2002–2022 Logitech, 2024 Lyrion Community";
+NSHumanReadableCopyright = "Opphavsrett 2024 Lyrion Community";
+NSPrefPaneIconLabel = "Lyrion\nMusic Server";
