--- a/osx/Preference Pane/Russian.lproj/Pref.strings
+++ b/osx/Preference Pane/Russian.lproj/Pref.strings
@@ -86,8 +86,8 @@
 /* Class = "NSMenuItem"; title = "Reset logging preferences"; ObjectID = "1004"; */
 "1004.title" = "Сбросить настройки ведения журнала";
 
-/* Class = "NSTextFieldCell"; title = "© 2001-2024 Logitech"; ObjectID = "1054"; */
-"1054.title" = "© Logitech, 2001–2022";
+/* Class = "NSTextFieldCell"; title = "© 2001-2024 Lyrion Community"; ObjectID = "1054"; */
+"1054.title" = "© Lyrion Community, 2001–2024";
 
 /* Class = "NSTextFieldCell"; title = "Version 9.0.0"; ObjectID = "1055"; */
 "1055.title" = "Версия 9.0.0";
