--- a/osx/Preference Pane/Swedish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Swedish.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "Lyrion Music Server";
 CFBundleShortVersionString = "9.0.0";
-CFBundleGetInfoString = "Lyrion Music Server version 9.0.0, © 2002–2022 Logitech";
-NSHumanReadableCopyright = "© 2002–2022 Logitech";
-NSPrefPaneIconLabel = "Logitech\nMedia Server";
+CFBundleGetInfoString = "Lyrion Music Server version 9.0.0, © 2002–2024 Logitech, 2024 Lyrion Community";
+NSHumanReadableCopyright = "© 2024 Lyrion Community";
+NSPrefPaneIconLabel = "Lyrion\nMusic Server";
